tests/specs/ecosystem/adam/confetti/1_0_2.test
adam/confetti/1.0.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'CSSStyleDeclaration'.
  customStyles?: CSSStyleDeclaration;
                 ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/confetti/confetti.ts:16:18

